--- a/index.html
+++ b/index.html
@@ -1,53 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link rel="stylesheet" href="styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Youtube Clone</title>
-</head>
-<body class="bg-gray-100 font-Roboto">
-    <header class="bg-white divide-y">
-        <div class="flex justify-between items-center h-14 mx-4">
-            <div>
-                <img class="w-20 h-12" src="./images/logo.png" alt="" srcset="">
-            </div>
-            <div class="flex justify-center items-center flex-grow">
-                <input type="text" placeholder="Search" class="border border-gray-400 h-8 px-1 py-2 focus:outline-none focus:border-blue-600 w-3/5">
-                <button class="bg-gray-200 h-8 w-16 border-gray-400 border-l-0 hover:bg-gray-300">
-                    <i class="material-icons">
-                        search
-                        </i>
-                </button>
-            </div>
-            <div class="flex justify-center items-center space-x-4">
-                <button class="flex justify-center items-center">
-                    <i class="material-icons">video_call
-                    </i>
-                </button>
-                <button class="flex justify-center items-center">
-                    <i class="material-icons">apps
-                    </i>
-                </button>
-                <button class="flex justify-center items-center">
-                    <i class="material-icons">notifications
-                    </i>
-                </button>
-                <button class="flex justify-center items-center">
-                    <div class="h-8 w-8 rounded-full bg-blue-300"></div>
-                </button>
-            </div>
+  </head>
+  <body class="bg-gray-100 font-Roboto antialiased">
+    <header class="bg-white divide-y ml-18 border-b">
+      <div class="flex justify-between items-center h-14 mx-4">
+        <div class="-ml-3">
+          <img class="w-20 h-12" src="./images/logo.png" alt="" srcset="" />
         </div>
-        <div class="flex items-center px-4 py-3 space-x-3">
-            <span class="text-sm bg-gray-700 border border-gray-800 rounded-full px-2 py-1 text-gray-200 shadow-inset">All Recommedations</span>
-            <span class="text-sm bg-gray-200 border border-gray-300 rounded-full px-2 py-1 text-gray-800 shadow-inset">Comedies</span>
-            <span class="text-sm bg-gray-200 border border-gray-300 rounded-full px-2 py-1 text-gray-800 shadow-inset">Web Series</span>
-            <span class="text-sm bg-gray-200 border border-gray-300 rounded-full px-2 py-1 text-gray-800 shadow-inset">Arjit Singh</span>
-            <span class="text-sm bg-gray-200 border border-gray-300 rounded-full px-2 py-1 text-gray-800 shadow-inset">Music</span>
+        <div class="flex justify-center items-center flex-grow">
+          <input
+            type="text"
+            placeholder="Search"
+            class="
+              border border-gray-400
+              h-8
+              px-1
+              py-2
+              focus:outline-none focus:border-blue-600
+              w-3/5
+            "
+          />
+          <button
+            class="
+              bg-gray-200
+              h-8
+              w-16
+              border-gray-400 border-l-0
+              hover:bg-gray-300
+            "
+          >
+            <i class="material-icons"> search </i>
+          </button>
         </div>
+        <div class="flex justify-center items-center space-x-4">
+          <button class="flex justify-center items-center">
+            <i class="material-icons">video_call </i>
+          </button>
+          <button class="flex justify-center items-center">
+            <i class="material-icons">apps </i>
+          </button>
+          <button class="flex justify-center items-center">
+            <i class="material-icons">notifications </i>
+          </button>
+          <button class="flex justify-center items-center">
+            <div class="h-8 w-8 rounded-full bg-blue-300"></div>
+          </button>
+        </div>
+      </div>
+      <div class="flex items-center px-4 py-3 space-x-3">
+        <span
+          class="
+            text-sm
+            bg-gray-700
+            border border-gray-800
+            rounded-full
+            px-2
+            py-1
+            text-gray-200
+            shadow-inset
+          "
+          >All Recommedations</span
+        >
+        <span
+          class="
+            text-sm
+            bg-gray-200
+            border border-gray-300
+            rounded-full
+            px-2
+            py-1
+            text-gray-800
+            shadow-inset
+          "
+          >Comedies</span
+        >
+        <span
+          class="
+            text-sm
+            bg-gray-200
+            border border-gray-300
+            rounded-full
+            px-2
+            py-1
+            text-gray-800
+            shadow-inset
+          "
+          >Web Series</span
+        >
+        <span
+          class="
+            text-sm
+            bg-gray-200
+            border border-gray-300
+            rounded-full
+            px-2
+            py-1
+            text-gray-800
+            shadow-inset
+          "
+          >Arjit Singh</span
+        >
+        <span
+          class="
+            text-sm
+            bg-gray-200
+            border border-gray-300
+            rounded-full
+            px-2
+            py-1
+            text-gray-800
+            shadow-inset
+          "
+          >Music</span
+        >
+      </div>
     </header>
-</body>
+    <sidebar
+      class="fixed top-0 w-18 h-screen bg-white flex items-center flex-col"
+    >
+      <button>
+        <i class="material-icons mt-4"> menu </i>
+      </button>
+      <div class="mt-6 w-full text-gray-700">
+        <button
+          class="
+            flex
+            justify-center
+            items-center
+            flex-col
+            w-full
+            hover:bg-gray-200
+            py-4
+            text-red-600
+          "
+        >
+          <i class="material-icons small">home</i>
+          <span class="text-xs">Home</span>
+        </button>
+        <button
+          class="
+            flex
+            justify-center
+            items-center
+            flex-col
+            w-full
+            hover:bg-gray-200
+            py-4
+          "
+        >
+          <i class="material-icons small">local_fire_department</i>
+          <span class="text-xs">Trending</span>
+        </button>
+        <button
+          class="
+            flex
+            justify-center
+            items-center
+            flex-col
+            w-full
+            hover:bg-gray-200
+            py-4
+          "
+        >
+          <i class="material-icons small">subscriptions</i>
+          <span class="text-xs">Subscriptions</span>
+        </button>
+        <button
+          class="
+            flex
+            justify-center
+            items-center
+            flex-col
+            w-full
+            hover:bg-gray-200
+            py-4
+          "
+        >
+          <i class="material-icons small">video_library</i>
+          <span class="text-xs">Library</span>
+    </button>
+      </div>
+    </sidebar>
+  </body>
 </html>
