desktop view completed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Youtube Clone</title>
   </head>
   <body class="bg-gray-100 font-Roboto antialiased">
-    <header class="bg-white divide-y ml-18 border-b">
+    <header class="bg-white bg-opacity-75 divide-y ml-18 border-b fixed inset-x-0">
       <div class="flex justify-between items-center h-14 mx-4">
         <div class="-ml-3">
           <img class="w-20 h-12" src="./images/logo.png" alt="" srcset="" />
@@ -67,7 +67,7 @@
             px-2
             py-1
             text-gray-200
-            shadow-inset
+            shadow-inner
           "
           >All Recommedations</span
         >
@@ -80,7 +80,7 @@
             px-2
             py-1
             text-gray-800
-            shadow-inset
+            shadow-inner
           "
           >Comedies</span
         >
@@ -93,7 +93,7 @@
             px-2
             py-1
             text-gray-800
-            shadow-inset
+            shadow-inner
           "
           >Web Series</span
         >
@@ -106,7 +106,7 @@
             px-2
             py-1
             text-gray-800
-            shadow-inset
+            shadow-inner
           "
           >Arjit Singh</span
         >
@@ -119,7 +119,7 @@
             px-2
             py-1
             text-gray-800
-            shadow-inset
+            shadow-inner
           "
           >Music</span
         >
@@ -191,5 +191,205 @@
     </button>
       </div>
     </sidebar>
+    <main class="ml-24 pt-32">
+      <div class="border-b-4 border-gray-500 pb-10">
+        <h3 class="text-xl font-bold">Recommended</h3>
+      
+      <div class="mt-4 grid grid-cols-4 col-gap-10 row-gap-4">
+        <div class="w-68 mt-4">
+          <div class="h-40 w-full bg-gray-700">
+            </div>
+            <div class="flex mt-2">
+              <div class="h-10 w-10 bg-blue-300 rounded-full flex-shrink-0"></div>
+              <div class="ml-2">
+                <div class="text-sm font-bold">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+                <div class="text-xs text-gray-700">
+                  <p>Channel Name</p>
+                  <p>9 hours ago &middot; 87k views</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="w-68 mt-4">
+          <div class="h-40 w-full bg-gray-700">
+            </div>
+            <div class="flex mt-2">
+              <div class="h-10 w-10 bg-blue-300 rounded-full flex-shrink-0"></div>
+              <div class="ml-2">
+                <div class="text-sm font-bold">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+                <div class="text-xs text-gray-700">
+                  <p>Channel Name</p>
+                  <p>9 hours ago &middot; 87k views</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="w-68 mt-4">
+          <div class="h-40 w-full bg-gray-700">
+            </div>
+            <div class="flex mt-2">
+              <div class="h-10 w-10 bg-blue-300 rounded-full flex-shrink-0"></div>
+              <div class="ml-2">
+                <div class="text-sm font-bold">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+                <div class="text-xs text-gray-700">
+                  <p>Channel Name</p>
+                  <p>9 hours ago &middot; 87k views</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="w-68 mt-4">
+          <div class="h-40 w-full bg-gray-700">
+            </div>
+            <div class="flex mt-2">
+              <div class="h-10 w-10 bg-blue-300 rounded-full flex-shrink-0"></div>
+              <div class="ml-2">
+                <div class="text-sm font-bold">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+                <div class="text-xs text-gray-700">
+                  <p>Channel Name</p>
+                  <p>9 hours ago &middot; 87k views</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="w-68 mt-4">
+          <div class="h-40 w-full bg-gray-700">
+            </div>
+            <div class="flex mt-2">
+              <div class="h-10 w-10 bg-blue-300 rounded-full flex-shrink-0"></div>
+              <div class="ml-2">
+                <div class="text-sm font-bold">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+                <div class="text-xs text-gray-700">
+                  <p>Channel Name</p>
+                  <p>9 hours ago &middot; 87k views</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="w-68 mt-4">
+          <div class="h-40 w-full bg-gray-700">
+            </div>
+            <div class="flex mt-2">
+              <div class="h-10 w-10 bg-blue-300 rounded-full flex-shrink-0"></div>
+              <div class="ml-2">
+                <div class="text-sm font-bold">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+                <div class="text-xs text-gray-700">
+                  <p>Channel Name</p>
+                  <p>9 hours ago &middot; 87k views</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="w-68 mt-4">
+          <div class="h-40 w-full bg-gray-700">
+            </div>
+            <div class="flex mt-2">
+              <div class="h-10 w-10 bg-blue-300 rounded-full flex-shrink-0"></div>
+              <div class="ml-2">
+                <div class="text-sm font-bold">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+                <div class="text-xs text-gray-700">
+                  <p>Channel Name</p>
+                  <p>9 hours ago &middot; 87k views</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="w-68 mt-4">
+          <div class="h-40 w-full bg-gray-700">
+            </div>
+            <div class="flex mt-2">
+              <div class="h-10 w-10 bg-blue-300 rounded-full flex-shrink-0"></div>
+              <div class="ml-2">
+                <div class="text-sm font-bold">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+                <div class="text-xs text-gray-700">
+                  <p>Channel Name</p>
+                  <p>9 hours ago &middot; 87k views</p>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-4">
+      <h3 class="text-xl font-bold">Latest Youtube Posts</h3>
+      <div class="mt-2 grid grid-cols-3 gap-6">
+        <div class="w-94 bg-white flex flex-col px-3 py-1 border border-gray-600">
+          <div class="flex items-center">
+            <div class="w-6 h-6 bg-blue-300 rounded-full"></div>
+            <div class="text-sm text-gray-600 ml-2">
+              <p>Lorem, ipsum &middot; 6 hours ago</p>
+            </div>
+          </div>
+          <div class="flex mt-3">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam, totam.</p>
+            <div class="w-32 h-32 bg-gray-600 flex-shrink-0"></div>
+          </div>
+          <div class="flex items-center justify-between text-sm text-gray-600 mt-3">
+            <div class="flex items-center">
+              <button><i class="material-icons">thumb_up</i></button>
+            <div class="ml-1">179</div>
+            <button><i class="material-icons ml-2">thumb_down</i></button>
+            </div>
+            <div class="flex items-start justify-center">
+              <button><i class="material-icons small">comment</i></button>
+              <div class="ml-1">24</div>
+              <button class="ml-3"><i class="material-icons small">more_vert</i></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="w-94 bg-white flex flex-col px-3 py-1 border border-gray-600">
+          <div class="flex items-center">
+            <div class="w-6 h-6 bg-blue-300 rounded-full"></div>
+            <div class="text-sm text-gray-600 ml-2">
+              <p>Lorem, ipsum &middot; 6 hours ago</p>
+            </div>
+          </div>
+          <div class="flex mt-3">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam, totam.</p>
+            <div class="w-32 h-32 bg-gray-600 flex-shrink-0"></div>
+          </div>
+          <div class="flex items-center justify-between text-sm text-gray-600 mt-3">
+            <div class="flex items-center">
+              <button><i class="material-icons">thumb_up</i></button>
+            <div class="ml-1">179</div>
+            <button><i class="material-icons ml-2">thumb_down</i></button>
+            </div>
+            <div class="flex items-start justify-center">
+              <button><i class="material-icons small">comment</i></button>
+              <div class="ml-1">24</div>
+              <button class="ml-3"><i class="material-icons small">more_vert</i></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="w-94 bg-white flex flex-col px-3 py-1 border border-gray-600">
+          <div class="flex items-center">
+            <div class="w-6 h-6 bg-blue-300 rounded-full"></div>
+            <div class="text-sm text-gray-600 ml-2">
+              <p>Lorem, ipsum &middot; 6 hours ago</p>
+            </div>
+          </div>
+          <div class="flex mt-3">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam, totam.</p>
+            <div class="w-32 h-32 bg-gray-600 flex-shrink-0"></div>
+          </div>
+          <div class="flex items-center justify-between text-sm text-gray-600 mt-3">
+            <div class="flex items-center">
+              <button><i class="material-icons">thumb_up</i></button>
+            <div class="ml-1">179</div>
+            <button><i class="material-icons ml-2">thumb_down</i></button>
+            </div>
+            <div class="flex items-start justify-center">
+              <button><i class="material-icons small">comment</i></button>
+              <div class="ml-1">24</div>
+              <button class="ml-3"><i class="material-icons small">more_vert</i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </main>
   </body>
 </html>
