desktop and mobile view completed

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <h3 class="text-xl font-bold">Recommended</h3>
 
         <div class="mt-4 grid md:grid-cols-4 col-gap-10 row-gap-4">
-          <div class="w-68 mt-4">
+          <div class="w-94 md:w-68 mt-4">
             <div class="h-40 w-full bg-gray-700"></div>
             <div class="flex mt-2">
               <div
@@ -217,7 +217,7 @@
               </div>
             </div>
           </div>
-          <div class="w-68 mt-4">
+          <div class="w-94 md:w-68 mt-4">
             <div class="h-40 w-full bg-gray-700"></div>
             <div class="flex mt-2">
               <div
@@ -234,7 +234,7 @@
               </div>
             </div>
           </div>
-          <div class="w-68 mt-4">
+          <div class="w-94 md:w-68 mt-4">
             <div class="h-40 w-full bg-gray-700"></div>
             <div class="flex mt-2">
               <div
@@ -251,7 +251,7 @@
               </div>
             </div>
           </div>
-          <div class="w-68 mt-4">
+          <div class="w-94 md:w-68 mt-4">
             <div class="h-40 w-full bg-gray-700"></div>
             <div class="flex mt-2">
               <div
@@ -268,7 +268,7 @@
               </div>
             </div>
           </div>
-          <div class="w-68 mt-4">
+          <div class="w-94 md:w-68 mt-4">
             <div class="h-40 w-full bg-gray-700"></div>
             <div class="flex mt-2">
               <div
@@ -285,7 +285,7 @@
               </div>
             </div>
           </div>
-          <div class="w-68 mt-4">
+          <div class="w-94 md:w-68 mt-4">
             <div class="h-40 w-full bg-gray-700"></div>
             <div class="flex mt-2">
               <div
@@ -302,7 +302,7 @@
               </div>
             </div>
           </div>
-          <div class="w-68 mt-4">
+          <div class="w-94 md:w-68 mt-4">
             <div class="h-40 w-full bg-gray-700"></div>
             <div class="flex mt-2">
               <div
@@ -319,7 +319,7 @@
               </div>
             </div>
           </div>
-          <div class="w-68 mt-4">
+          <div class="w-94 md:w-68 mt-4">
             <div class="h-40 w-full bg-gray-700"></div>
             <div class="flex mt-2">
               <div
